# anomaly_detection

./: .env  .gitignore  README.md  config.yaml  manager.py  openai_call.py
.github/ISSUE_TEMPLATE/: feature_request.md
anomaly_detection/: anomaly_detection_node.py  package.xml  response_handler.py  setup.py
anomaly_detection/anomaly_detection/: JsonRingBuffer  StringRingBuffer.py  aad_dashboard.html  aad_dashboard_bridge.py  anomaly_detection_node.py  config.yaml  eval_results.json  llm_client.py  openai_call.py  response_handler.py  run_aad_config_tests.py
anomaly_detection/anomaly_detection/buffer_model/: EmotionDetection.py  buffer_model.py  emotion_detection.py  install.sh
anomaly_detection/launch/: anomaly_detection.launch.py
anomaly_detection/test/: test_publisher.py  test_response_handler.py
anomaly_detection/test/install/: setup.bash  (+4 more)
anomaly_msg/: CMakeLists.txt  package.xml
anomaly_msg/msg/: AnomalyMsg.msg
install/: local_setup.sh  setup.sh
install/tester/share/tester/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
system_evaluation/: aad_dataset.csv  eval_results.json
system_evaluation/configs/: config.yaml  local_config copy 2.yaml  local_config copy.yaml  local_config.yaml
tester/: package.xml  setup.py
tester/tester/: camera_anomaly_publisher.py  eta_anomaly_publisher.py  fake_camera_node.py  fake_lidar_node.py  lidar_test_node.py  offline_eta_anomaly_publisher.py  test_api_artifact_observer.py  test_api_bag_creation.py  test_raw_input_publisher.py  ui_payload_processor_node.py
(+51 files in other folders)
