<?xml version="1.0"?>
<package format="3">
  <name>tester</name>
  <version>0.0.1</version>
  <description>Test nodes to publish fake anomaly messages</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>anomaly_msg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
